input box z-index fix

--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,7 @@ TODO INPUT BOX
     width: 800px;
     max-width: 100%;
     box-shadow: 0px -20px 10px var(--black-color);
+    z-index: 1000;
 }
 
 .input-header {
